Fixed css that was causing overflow issues on mobile.

--- a/stylesheets/article.css
+++ b/stylesheets/article.css
@@ -9,6 +9,7 @@ header h1 {
 }
 
 img {
+  width: 100%;
   display: block;
   margin: auto;
 }
