--- a/stylesheets/home-page.css
+++ b/stylesheets/home-page.css
@@ -32,7 +32,6 @@
 
 .home-news {
   width: 23%;
-  padding: 0.5em;
   float: left;
 }
 
